test: initialized functional tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ addopts =
   --doctest-modules
   --strict-markers
 markers = 
-  --slow: Run tests that are slow
-  --fast: Run fast tests
-  --functional-test: Run functional test
+  slow: Run tests that are slow
+  fast: Run fast tests
+  functional_test: Run functional test
+  
